force-app/main/default/objects/PackageLine__c/PackageLine__c.object-meta.xml
<CustomObject>
    <label>Package Line</label>
    <nameField>
        <label>Package Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Package Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>