force-app/main/default/objects/PackageLine__c/fields/Defaultprice__c.field-meta.xml
<CustomField>
    <fullName>Defaultprice__c</fullName>
    <label>Default price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>