force-app/main/default/objects/PackageLine__c/fields/Defaultquantity__c.field-meta.xml
<CustomField>
    <fullName>Defaultquantity__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Default Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>