force-app/main/default/objects/PackageLine__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <label>Package</label>
    <referenceTo>Pack__c</referenceTo>
    <relationshipLabel>Package Lines</relationshipLabel>
    <relationshipName>Package_Lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>