force-app/main/default/objects/PackageLine__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Package Lines</relationshipLabel>
    <relationshipName>Package_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>